# Diabetic-Retinopathy-Detection

./: README.md  pyproject.toml  requirements.txt
src/diabetic_retinopathy/: __init__.py  config.py  datasets.py  evaluate.py  model.py  predict.py  train.py
tests/: test_smoke.py
